# opengl_sandbox

./: .gitignore  CMakeLists.txt  README.md
classes/: Allocator.cpp  Allocator.h  Application.cpp  Application.h  Applicationcpp.cpp  AutoReleasePool.cpp  AutoReleasePool.h  AutoRelesaePool.cpp  AutoRelesaePool.h  AxisesOrigin.cpp  AxisesOrigin.h  Camera.cpp  Camera.h  CameraMovementController.cpp  CameraMovementController.h  ColorCube.cpp  ColorCube.h  Common.cpp  Common.h  Creator.cpp  Creator.h  Cube.cpp  Cube.h  CubeMap.cpp  CubeMap.h  CubeVertices.cpp  CubeVertices.h  CustomFrameBuffer.cpp  CustomFrameBuffer.h  DirectLightSource.cpp  DirectLightSource.h  Director.cpp  Director.h  DrawTypes.cpp  DrawTypes.h  FileUtils.cpp  FileUtils.h  Flashlight.cpp  Flashlight.h  GLContext.cpp  (+86 more)
classes/shaders/: cubemapSampler.frag  dotToRound.gmtr  posUVNormalLightProp.frag  posUVNormalLightProp.vert  positionNoModel.vert  positionNormalLightProp.frag  positionNormalLightProp.vert  positionUColor.frag  positionUColor.vert  positionUVNoMVP.vert  positionUVTexture.frag  positionUVTexture.vert  shader.tmpl  skyboxReflection.frag  skyboxRefraction.frag
func_tests_src/: CameraMovementController.cpp  CameraMovementController.h  DirectLightTest.cpp  DirectLightTest.h  DrawLightningModelTest.cpp  DrawLightningModelTest.h  DrawModelTest.cpp  DrawModelTest.h  DrawPointTest.cpp  DrawPointTest.h  DrawPrimitivesTest.cpp  DrawPrimitivesTest.h  DrawSpriteTest.cpp  DrawSpriteTest.h  FlashlightTest.cpp  FlashlightTest.h  FrameBufferTest.cpp  FrameBufferTest.h  FuncTest.cpp  FuncTest.h  FunctionalTestsDelegate.cpp  FunctionalTestsDelegate.h  MoveViewTest.cpp  MoveViewTest.h  OutlineSpriteTest.cpp  OutlineSpriteTest.h  PointLightTest.cpp  PointLightTest.h  ReflectionCubeTest.cpp  ReflectionCubeTest.h  RefractionCubeTest.cpp  RefractionCubeTest.h  ResMngTest.cpp  ResMngTest.h  SkyboxTest.cpp  SkyboxTest.h  TestScene.cpp  TestScene.h  TestScopeDelegat.cpp  TestScopeDelegat.h  (+1 more)
resources/resdb/: resources.json
resources/shaders/: cube_fragment.fsh  cube_vertex.vsh  fragment.fsh  illuminat_fragment.fsh  illuminat_vertex.vsh  model_fragment.fsh  model_vertex.vsh  sprite_fragment.fsh  sprite_vertex.vsh  vertex.vsh  vertex_pos_ucolor.fsh  vertex_pos_ucolor.vsh
unit_tests_src/: RefTest.cpp  RefTest.h  TimeSchedulerTest.cpp  TimeSchedulerTest.h  unit_tests_main.cpp
win32/: .gitignore  opengl_sandbox.aps  opengl_sandbox.sln  win32.vcxproj  win32.vcxproj.filters
win32/Release/: opengl_sandbox.iobj  opengl_sandbox.ipdb
win32/Release/opengl_sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl_sandbox.lastbuildstate  opengl_sandbox.write.1u.tlog
win64/: .gitignore  opengl_sandbox_64.sln  opengl_sandbox_64.vcxproj  opengl_sandbox_64.vcxproj.filters
working_tests_src/: CameraMovementController.cpp  CameraMovementController.h  TestScene.cpp  TestScene.h  TestScopeDelegat.cpp  TestScopeDelegat.h  working_tests_main.cpp
